longer nginx timeout for quiz creation, fix spring boot api docu link